--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.1.0",
     "ruff>=0.11.10",
+    "python-magic>=0.4.27",
 ]
 
 [project.optional-dependencies]
