--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "ruff>=0.11.10",
     "python-magic>=0.4.27",
+    "moviepy==1.0.3",
+    "ffmpeg-python==0.2.0",
 ]
 
 [project.optional-dependencies]
